# NotBug

./: .gitignore  README.md  docker-compose.yml
blog-django/: Dockerfile  db.sqlite3  pyproject.toml
blog-django/blog/: forms.py  models.py  urls.py  views.py
blog-django/blog/migrations/: 0001_initial.py
blog-django/blog/templates/blog/: base.html  login.html  post_detail.html  post_form.html  post_list.html  register.html
blog-django/config/: settings.py  urls.py
cars-angular/: Dockerfile  README.md  angular.json  package-lock.json  package.json
cars-angular/src/: index.html  main.ts
cars-angular/src/app/: app.component.ts
cars-angular/src/app/components/car-detail/: car-detail.component.css  car-detail.component.html  car-detail.component.spec.ts  car-detail.component.ts
cars-angular/src/app/components/car-details-dialog/: car-details-dialog.component.css  car-details-dialog.component.html  car-details-dialog.component.ts
cars-angular/src/app/models/: car.model.ts
cars-angular/src/app/services/: car.service.ts
pokemons-angular/: Dockerfile  README.md  angular.json  package-lock.json  package.json
pokemons-angular/src/: main.ts
pokemons-angular/src/app/: app.component.spec.ts
pokemons-angular/src/app/services/: pokemon.service.ts
python-tasks/: main.ipynb
rxjs/: index.js  package.json
todo-flask/: Dockerfile  alembic.ini  hypercorn_config.py  prestart.sh  pyproject.toml
todo-flask/app/: crud.py  main.py  models.py  utils.py
todo-flask/app/api/: deps.py
todo-flask/app/api/routers/: tasks.py
todo-flask/app/core/: config.py  db.py
(+12 files in other folders)
