[tool.poetry]
name = "todo-flask"
version = "0.1.0"
description = "simple todo list in flask"
authors = ["Crapteep"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pydantic = "^2.9.2"
flask-sqlalchemy = "^3.1.1"
alembic = "^1.13.3"
flask-cors = "^5.0.0"
sqlmodel = "^0.0.22"
psycopg = {extras = ["binary"], version = "^3.2.3"}
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.17"
hypercorn = "^0.17.3"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
